[project]
name = "fastapi-related"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "bcrypt==3.2.2",
    "debugpy>=1.8.19",
    "fastapi[all]>=0.122.0",
    "httpx>=0.28.1",
    "locust>=2.43.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic[email]>=2.12.5",
    "pymongo>=4.15.5",
    "pyotp>=2.9.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.44",
    "uvicorn[standard]>=0.38.0",
]
